Tweaking Merge Intervals